Fix choose plan ui issues

--- a/OsmAnd/res/layout/purchase_dialog_osm_live_card.xml
+++ b/OsmAnd/res/layout/purchase_dialog_osm_live_card.xml
@@ -63,6 +63,7 @@
 		android:id="@+id/card_buttons_container"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginBottom="2dp"
 		android:orientation="vertical"
 		android:visibility="gone" />
 
