--- a/OsmAnd/res/layout/purchase_dialog_card_button_ex.xml
+++ b/OsmAnd/res/layout/purchase_dialog_card_button_ex.xml
@@ -47,8 +47,9 @@
 
 				<net.osmand.plus.widgets.TextViewEx
 					android:id="@+id/description"
-					android:layout_width="wrap_content"
+					android:layout_width="0dp"
 					android:layout_height="wrap_content"
+					android:layout_weight="1"
 					android:textColor="?attr/card_description_text_color"
 					android:textSize="@dimen/default_desc_text_size"
 					osmand:typeface="@string/font_roboto_regular"
@@ -58,6 +59,7 @@
 					android:id="@+id/discount_banner_regular"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_gravity="bottom"
 					android:layout_marginStart="@dimen/list_item_button_padding"
 					android:layout_marginLeft="@dimen/list_item_button_padding"
 					android:background="?attr/text_rounded_bg_regular"
@@ -70,6 +72,7 @@
 					android:id="@+id/discount_banner_active"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_gravity="bottom"
 					android:layout_marginStart="@dimen/list_item_button_padding"
 					android:layout_marginLeft="@dimen/list_item_button_padding"
 					android:background="?attr/text_rounded_bg_active"
@@ -83,6 +86,7 @@
 		</LinearLayout>
 
 		<LinearLayout
+			android:id="@+id/button_view"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
@@ -92,6 +96,7 @@
 				android:id="@+id/button"
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/dialog_button_height"
+				android:background="?attr/selectableItemBackground"
 				android:gravity="center"
 				android:orientation="horizontal"
 				android:padding="@dimen/list_header_padding">
@@ -112,6 +117,39 @@
 					android:maxWidth="@dimen/dialog_button_ex_max_width"
 					android:minWidth="@dimen/dialog_button_ex_min_width"
 					android:textColor="?attr/color_dialog_buttons"
+					android:textSize="@dimen/text_button_text_size"
+					osmand:typeface="@string/font_roboto_medium"
+					tools:text="7,99€" />
+
+			</LinearLayout>
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:id="@+id/button_ex_view"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:background="?attr/wikivoyage_primary_btn_bg">
+
+			<LinearLayout
+				android:id="@+id/button_ex"
+				android:layout_width="match_parent"
+				android:layout_height="@dimen/dialog_button_height"
+				android:background="?attr/selectableItemBackground"
+				android:gravity="center"
+				android:orientation="horizontal"
+				android:padding="@dimen/list_header_padding">
+
+				<net.osmand.plus.widgets.TextViewEx
+					android:id="@+id/button_ex_title"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:gravity="center"
+					android:letterSpacing="@dimen/text_button_letter_spacing"
+					android:maxWidth="@dimen/dialog_button_ex_max_width"
+					android:minWidth="@dimen/dialog_button_ex_min_width"
+					android:textColor="@color/color_white"
 					android:textSize="@dimen/text_button_text_size"
 					osmand:typeface="@string/font_roboto_medium"
 					tools:text="7,99€" />
