--- a/OsmAnd-telegram/res/layout/fragment_live_now_tab.xml
+++ b/OsmAnd-telegram/res/layout/fragment_live_now_tab.xml
@@ -117,12 +117,24 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 
+		<net.osmand.telegram.ui.views.TextViewEx
+			android:id="@+id/last_telegram_update_time"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="top|center_horizontal"
+			android:gravity="center"
+			android:paddingTop="@dimen/content_padding_half"
+			android:textColor="?android:attr/textColorSecondary"
+			android:textSize="@dimen/list_item_description_text_size"
+			android:visibility="gone"
+			app:typeface="@string/font_roboto_regular" />
+
 		<android.support.v7.widget.RecyclerView
 			android:id="@+id/recycler_view"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:clipToPadding="false"
-			android:paddingBottom="@dimen/list_view_bottom_padding"
+			android:paddingBottom="@dimen/list_item_content_margin"
 			android:scrollbars="vertical"/>
 
 		<net.osmand.telegram.ui.views.TextViewEx
