--- a/OsmAnd/res/layout/main.xml
+++ b/OsmAnd/res/layout/main.xml
@@ -93,13 +93,32 @@
 
     </FrameLayout>
 
-    <ListView
-        android:id="@+id/menuItems"
+    <RelativeLayout
+        android:id="@+id/drawer_relative_layout"
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:background="?attr/bg_color"
-        android:clipToPadding="false"
-        android:drawSelectorOnTop="true"/>
+        android:layout_gravity="start">
+
+        <ListView
+            android:id="@+id/menuItems"
+            android:layout_width="280dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
+            android:background="?attr/bg_color"
+            android:clipToPadding="false"
+            android:drawSelectorOnTop="true" />
+
+        <RelativeLayout
+            android:id="@+id/drawer_footer_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackground"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone">
+
+            <include layout="@layout/powered_by_osmand_item"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
 
 </android.support.v4.widget.DrawerLayout>
