--- a/OsmAnd/res/layout/live_updates_header.xml
+++ b/OsmAnd/res/layout/live_updates_header.xml
@@ -183,33 +183,72 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/div_button_settings"
+            android:id="@+id/buttons_div"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?attr/dashboard_divider"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <LinearLayout
-            android:id="@+id/button_settings"
+            android:id="@+id/buttons_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:minHeight="48dp"
-            android:visibility="gone">
+            android:orientation="horizontal"
+            android:visibility="visible">
 
-            <net.osmand.plus.widgets.TextViewEx
+            <LinearLayout
+                android:id="@+id/button_subscriptions_container"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.5"
-                android:layout_marginBottom="4dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="4dp"
-                android:gravity="right"
-                app:textAllCapsCompat="true"
-                android:text="@string/shared_string_settings"
-                android:textColor="?attr/color_dialog_buttons"
-                android:textSize="@dimen/default_list_text_size"
-                app:typeface="@string/font_roboto_medium"/>
+                android:gravity="left|center_vertical">
+
+                <net.osmand.plus.widgets.TextViewEx
+                    android:id="@+id/button_subscriptions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="@string/osm_live_subscriptions"
+                    android:textColor="?attr/color_dialog_buttons"
+                    android:textSize="@dimen/default_list_text_size"
+                    app:textAllCapsCompat="true"
+                    app:typeface="@string/font_roboto_medium" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/button_settings_container"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="right|center_vertical">
+
+                <net.osmand.plus.widgets.TextViewEx
+                    android:id="@+id/button_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:gravity="right|center_vertical"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="@string/shared_string_settings"
+                    android:textColor="?attr/color_dialog_buttons"
+                    android:textSize="@dimen/default_list_text_size"
+                    app:textAllCapsCompat="true"
+                    app:typeface="@string/font_roboto_medium" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
