improve toolbar buttons ui

--- a/OsmAnd/res/drawable/route_info_trans_gradient_dark.xml
+++ b/OsmAnd/res/drawable/route_info_trans_gradient_dark.xml
@@ -9,6 +9,7 @@
 				android:endColor="@color/activity_background_dark"
 				android:centerX="0.2"
 				android:type="linear" />
+			<corners android:radius="4dp" />
 		</shape>
 	</item>
 </selector>
