--- a/OsmAnd/res/drawable/route_info_trans_gradient_light.xml
+++ b/OsmAnd/res/drawable/route_info_trans_gradient_light.xml
@@ -9,6 +9,7 @@
 				android:endColor="@color/card_and_list_background_light"
 				android:centerX="0.2"
 				android:type="linear" />
+			<corners android:radius="4dp" />
 		</shape>
 	</item>
 </selector>
