--- a/OsmAnd/res/layout/route_option_btn.xml
+++ b/OsmAnd/res/layout/route_option_btn.xml
@@ -3,8 +3,8 @@
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/route_option_button"
-	android:layout_width="wrap_content"
-	android:layout_height="@dimen/route_info_settings_buttons_height"
+	android:layout_width="100dp"
+	android:layout_height="wrap_content"
 	android:orientation="horizontal">
 
 	<LinearLayout
