--- a/OsmAnd/res/layout/route_options_container.xml
+++ b/OsmAnd/res/layout/route_options_container.xml
@@ -3,44 +3,37 @@
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/route_option_button"
-	android:layout_width="wrap_content"
-	android:layout_height="@dimen/route_info_settings_buttons_height"
+	android:layout_width="100dp"
+	android:layout_height="match_parent"
+	android:orientation="horizontal"
 	tools:background="@drawable/btn_border_trans_dark">
-
-	<View
-		android:id="@+id/options_divider_start"
-		android:layout_width="1dp"
-		android:layout_height="match_parent"
-		android:layout_marginBottom="@dimen/list_item_button_padding"
-		android:layout_marginTop="@dimen/list_item_button_padding"
-		android:visibility="gone"/>
 
 	<FrameLayout
 		android:id="@+id/removable_option"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:visibility="visible">
 
 		<LinearLayout
 			android:id="@+id/route_removable_option_container"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:gravity="center">
+			android:gravity="start|center_vertical">
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/route_removable_option_title"
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+				android:layout_height="match_parent"
 				android:layout_gravity="center"
+				android:layout_marginEnd="4dp"
+				android:layout_marginLeft="3dp"
+				android:layout_marginRight="4dp"
+				android:layout_marginStart="3dp"
 				android:ellipsize="end"
 				android:gravity="center"
 				android:letterSpacing="@dimen/text_button_letter_spacing"
 				android:maxLines="1"
 				android:paddingBottom="3dp"
-				android:paddingEnd="4dp"
-				android:paddingLeft="3dp"
-				android:paddingRight="4dp"
-				android:paddingStart="3dp"
 				android:paddingTop="3dp"
 				android:text="@string/routing_attr_avoid_motorway_name"
 				android:textSize="@dimen/text_button_text_size"
@@ -55,8 +48,10 @@
 			android:layout_width="wrap_content"
 			android:layout_height="1dp"
 			android:layout_gravity="center_vertical"
-			android:layout_marginLeft="2dp"
-			android:layout_marginRight="2dp"
+			android:layout_marginEnd="4dp"
+			android:layout_marginLeft="3dp"
+			android:layout_marginRight="4dp"
+			android:layout_marginStart="3dp"
 			android:background="@color/recording_color" />
 
 		<ImageView
@@ -64,19 +59,22 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="end|center_vertical"
+			android:layout_marginLeft="1dp"
+			android:layout_marginRight="1dp"
 			android:paddingBottom="3dp"
 			android:paddingLeft="@dimen/route_info_icon_vertical_padding"
 			android:paddingRight="@dimen/route_info_icon_vertical_padding"
 			android:paddingTop="3dp"
 			tools:src="@drawable/ic_action_remove_dark" />
 
-	</FrameLayout>
+		<View
+			android:id="@+id/options_divider_end"
+			android:layout_width="1dp"
+			android:layout_height="match_parent"
+			android:layout_gravity="end"
+			android:layout_marginBottom="@dimen/list_item_button_padding"
+			android:layout_marginTop="@dimen/list_item_button_padding" />
 
-	<View
-		android:id="@+id/options_divider_end"
-		android:layout_width="1dp"
-		android:layout_height="match_parent"
-		android:layout_marginBottom="@dimen/list_item_button_padding"
-		android:layout_marginTop="@dimen/list_item_button_padding" />
+	</FrameLayout>
 
 </LinearLayout>
