--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -221,9 +221,9 @@
 							android:layout_height="wrap_content"
 							android:layout_marginBottom="3dp"
 							android:layout_marginTop="5dp"
+							android:ellipsize="end"
 							android:gravity="left"
 							android:singleLine="true"
-							android:ellipsize="end"
 							android:text="@string/intermediate_destinations"
 							android:textSize="@dimen/default_sub_text_size" />
 
@@ -418,7 +418,6 @@
 					android:layout_height="match_parent"
 					android:layout_gravity="start"
 					android:paddingBottom="@dimen/bottom_sheet_content_margin_small"
-					android:paddingLeft="@dimen/bottom_sheet_content_margin_small"
 					android:paddingTop="@dimen/bottom_sheet_content_margin_small">
 
 					<LinearLayout
@@ -426,30 +425,52 @@
 						android:layout_width="wrap_content"
 						android:layout_height="match_parent"
 						android:gravity="start"
-						android:orientation="horizontal">
+						android:orientation="horizontal"
+						android:paddingEnd="70dp"
+						android:paddingLeft="5dp"
+						android:paddingRight="70dp"
+						android:paddingStart="5dp">
 
 					</LinearLayout>
 
 				</HorizontalScrollView>
 
-				<net.osmand.plus.widgets.TextViewEx
+				<LinearLayout
 					android:id="@+id/map_options_route_button"
 					android:layout_width="wrap_content"
 					android:layout_height="match_parent"
 					android:layout_gravity="end"
-					android:background="?attr/selectableItemBackground"
-					android:drawablePadding="@dimen/content_padding_small"
-					android:ellipsize="end"
-					android:gravity="center"
-					android:letterSpacing="@dimen/text_button_letter_spacing"
-					android:maxLines="1"
+					android:orientation="horizontal"
 					android:paddingLeft="@dimen/route_info_buttons_padding_top_bottom"
-					android:paddingRight="@dimen/route_info_buttons_padding_top_bottom"
-					android:text="@string/shared_string_options"
-					android:textSize="@dimen/text_button_text_size"
-					osmand:typeface="@string/font_roboto_medium"
-					tools:ignore="UnusedAttribute"
-					tools:textColor="?attr/wikivoyage_active_color" />
+					android:paddingStart="@dimen/route_info_buttons_padding_top_bottom">
+
+					<net.osmand.plus.widgets.TextViewEx
+						android:id="@+id/map_options_route_button_title"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:layout_gravity="end"
+						android:ellipsize="end"
+						android:gravity="center"
+						android:letterSpacing="@dimen/text_button_letter_spacing"
+						android:maxLines="1"
+						android:text="@string/shared_string_options"
+						android:textSize="@dimen/text_button_text_size"
+						osmand:typeface="@string/font_roboto_medium"
+						tools:ignore="UnusedAttribute"
+						tools:textColor="?attr/wikivoyage_active_color" />
+
+					<ImageView
+						android:id="@+id/map_options_route_button_icon"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:paddingEnd="@dimen/route_info_buttons_padding_top_bottom"
+						android:paddingLeft="@dimen/content_padding_small"
+						android:paddingRight="@dimen/route_info_buttons_padding_top_bottom"
+						android:paddingStart="@dimen/content_padding_small"
+						tools:src="@drawable/ic_action_edit_dark"
+						tools:tint="@color/recording_color" />
+
+				</LinearLayout>
 
 				<ProgressBar
 					android:id="@+id/progress_bar"
