--- a/OsmAnd/res/layout/route_option_btn.xml
+++ b/OsmAnd/res/layout/route_option_btn.xml
@@ -4,14 +4,14 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/route_option_button"
 	android:layout_width="100dp"
-	android:layout_height="wrap_content"
+	android:layout_height="32dp"
 	android:orientation="horizontal">
 
 	<LinearLayout
 		android:id="@+id/route_option_container"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:gravity="center"
+		android:gravity="start"
 		android:visibility="visible"
 		tools:background="@drawable/btn_border_trans_dark">
 
@@ -42,7 +42,7 @@
 			android:paddingStart="3dp"
 			android:paddingTop="3dp"
 			android:text="@string/routing_attr_avoid_motorway_name"
-			android:textSize="@dimen/text_button_text_size"
+			android:textSize="@dimen/default_sub_text_size"
 			osmand:typeface="@string/font_roboto_medium"
 			tools:ignore="UnusedAttribute"
 			tools:textColor="?attr/wikivoyage_active_color" />
