--- a/OsmAnd/res/layout/route_options_container.xml
+++ b/OsmAnd/res/layout/route_options_container.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/route_option_button"
 	android:layout_width="100dp"
-	android:layout_height="match_parent"
+	android:layout_height="32dp"
 	android:orientation="horizontal"
 	tools:background="@drawable/btn_border_trans_dark">
 
@@ -18,17 +18,15 @@
 			android:id="@+id/route_removable_option_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:gravity="start|center_vertical">
+			android:gravity="start|center_vertical"
+			android:paddingLeft="8dp"
+			android:paddingRight="8dp">
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/route_removable_option_title"
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
 				android:layout_gravity="center"
-				android:layout_marginEnd="4dp"
-				android:layout_marginLeft="3dp"
-				android:layout_marginRight="4dp"
-				android:layout_marginStart="3dp"
 				android:ellipsize="end"
 				android:gravity="center"
 				android:letterSpacing="@dimen/text_button_letter_spacing"
@@ -36,7 +34,7 @@
 				android:paddingBottom="3dp"
 				android:paddingTop="3dp"
 				android:text="@string/routing_attr_avoid_motorway_name"
-				android:textSize="@dimen/text_button_text_size"
+				android:textSize="@dimen/default_sub_text_size"
 				osmand:typeface="@string/font_roboto_medium"
 				tools:ignore="UnusedAttribute"
 				tools:textColor="?attr/wikivoyage_active_color" />
@@ -48,11 +46,9 @@
 			android:layout_width="wrap_content"
 			android:layout_height="1dp"
 			android:layout_gravity="center_vertical"
-			android:layout_marginEnd="4dp"
-			android:layout_marginLeft="3dp"
-			android:layout_marginRight="4dp"
-			android:layout_marginStart="3dp"
-			android:background="@color/recording_color" />
+			android:layout_marginLeft="8dp"
+			android:layout_marginRight="8dp"
+			android:background="@color/description_font_and_bottom_sheet_icons" />
 
 		<ImageView
 			android:id="@+id/removable_option_icon"
@@ -70,10 +66,8 @@
 		<View
 			android:id="@+id/options_divider_end"
 			android:layout_width="1dp"
-			android:layout_height="match_parent"
-			android:layout_gravity="end"
-			android:layout_marginBottom="@dimen/list_item_button_padding"
-			android:layout_marginTop="@dimen/list_item_button_padding" />
+			android:layout_height="16dp"
+			android:layout_gravity="end|center_vertical" />
 
 	</FrameLayout>
 
